--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,9 @@
 <body>
     
     <div class="container mt-5">
+        {% from 'bootstrap5/utils.html' import render_messages %}
+        {{ render_messages(container=False, dismissible=True) }}
+        
         {% block body %}
         {% endblock %}
     </div>
