--- a/templates/base.html
+++ b/templates/base.html
@@ -15,12 +15,29 @@
 <body>
     
     <div class="container mt-5">
+        {% from 'bootstrap5/nav.html' import render_nav_item %}
+        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top mb-5">
+            <a class="navbar-brand ms-2" href="{{url_for('index') }}">Flask-Blog</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+    
+            <div class="collapse navbar-collapse mt-1" id="navbarNav">
+                <ul class="navbar-nav">
+                    {{ render_nav_item('post_create', 'Novi članak', _use_li = True) }}
+                </ul>
+            </div>
+        </nav>        
+
         {% from 'bootstrap5/utils.html' import render_messages %}
         {{ render_messages(container=False, dismissible=True) }}
         
         {% block body %}
         {% endblock %}
     </div>
+    {% block scripts %}
     {{ bootstrap.load_js() }}
+    {% endblock %}
 </body>
 </html>
