--- a/templates/index.html
+++ b/templates/index.html
@@ -7,14 +7,23 @@
 {% endblock %}
 
 {% block body %}
-<h1>Dobrodošli u moju Flask aplikaciju!</h1>
-{% if name %}
-	<h2>Hello, {{ name }}!</h2>
-{% else %}
-	<h2>Hello, Stranger!</h2>
-{% endif %}
+<h1 class="mb-4">Flask-Blog</h1>
 
-{% from 'bootstrap5/form.html' import render_form %}
-{{ render_form(form) }}
+<ul class="col-8 list-unstyled">
+    {% for post in posts %}
+    <li>
+        <h2><a href="{{ url_for('post_view', post_id=post['_id']) }}" class="text-dark text-decoration-none">{{ post.title }}</a></h2>
+		{% if post.image_id %}
+		<img src="{{ url_for('serve_image', image_id=post.image_id) }}" class="img-fluid" alt="Slika">
+		{% endif %}        
+		<p><strong>Autor:</strong> {{ post.author }} - {{ post.date.strftime('%d.%m.%Y') }}</p>
+        <p class="mt-2">{% for tag in post.tags.split(',') %}
+            <span class="badge bg-primary">{{ tag }}</span>
+        {% endfor %}</p>
+        <p>{{ post.content | markdown | safe }}</p>
+        <hr>
+    </li>
+    {% endfor %}    
+</ul>
 
 {% endblock %}
