--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,11 @@
         {% endblock %}    
     {% endblock %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    {% if current_user.theme %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.3/dist/{{current_user.theme}}/bootstrap.min.css">
+    {% endif %}
 </head>
 <body>
-    
     <div class="container mt-5">
         {% from 'bootstrap5/nav.html' import render_nav_item %}
         <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5 sticky-top">
@@ -38,8 +40,14 @@
                             {{current_user.get_id()}}
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item icon-link" href="{{url_for('profile') }}"><i class="bi bi-person mb-2"></i>Profil</a>
+                            <li>
+                                <a class="dropdown-item icon-link" href="{{url_for('profile') }}"><i class="bi bi-person mb-2"></i>Profil</a>
                             </li>
+                            {% if current_user.is_admin %}
+                            <li>
+                                <a class="dropdown-item icon-link" href="{{url_for('users') }}"><i class="bi bi-people mb-2"></i>Korisnici</a>
+                            </li>
+                            {% endif %}
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -48,7 +56,7 @@
                     </li>
                     {% else %}
                     {{ render_nav_item('login', 'Prijava', _use_li = True) }}
-                    {{ render_nav_item('login', 'Registracija', _use_li = True) }}
+                    {{ render_nav_item('register', 'Registracija', _use_li = True) }}
                     {% endif %}
                     </li>
                 </ul>
