--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
     <div class="container mt-5">
         {% from 'bootstrap5/nav.html' import render_nav_item %}
         <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5 sticky-top">
-            <a class="navbar-brand" href="{{url_for('index') }}">Flask-Blog</a>
+            <a class="navbar-brand" href="{{url_for('index') }}">PZW-Blog</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
